test/datalog_tests/strings.fail.ast.expected
Failed to parse input file: "./test/datalog_tests/strings.fail.dl" (line 5, column 28):
unexpected ";"
"./test/datalog_tests/strings.fail.dl" (line 5, column 27):
unexpected end of input
expecting letter or digit, "_", operator, "+", "-" or "}"

error: ./test/datalog_tests/strings.fail.dl:7:18-7:19: Cannot find declaration of function type12string needed to convert expression x to string

error: ./test/datalog_tests/strings.fail.dl:6:24-6:28: Unknown variable: str1

error: ./test/datalog_tests/strings.fail.dl:9:1-13:1: string conversion function "serializable_t2string" must take argument of type serializable_t
